// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeOperationTableActionOptions should normalize complex operation table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": "archive-action",
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "archive",
  "inHeader": false,
  "kind": "operation",
  "name": "archive",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Archive",
  "type": "archive",
}
`;

exports[`NormalizeOperationTableActionOptions should normalize minimal operation table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": "delete-action",
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": null,
  "inHeader": false,
  "kind": "operation",
  "name": "delete",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Delete",
  "type": "delete",
}
`;
